--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ name = "dynamax"
 dynamic = ["version"]
 requires-python = ">= 3.10"
 dependencies = [
-    "jax==0.4.26",
-    "jaxlib==0.4.26",
-    "tensorflow-probability>=0.23,<0.25",
+    "jax",
+    "jaxlib",
+    "tfp-nightly",
     "fastprogress",
     "optax",
     "scikit-learn",
     "jaxtyping",
     "typing-extensions",
-    "numpy>=1.24,<2.0"
+    "numpy"
 ]
 
 authors = [
